// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button isDisabled={false} textColor=\\"#000\\" bgColor=\\"#f1f5f9\\" w=\\"100px\\">
    Submit
  </Button>
</Frame>;
"
`;

exports[`card with no border radius on image default 1`] = `
"<Frame width={300} height={400}>
  <Box
    display=\\"flex\\"
    w=\\"300px\\"
    h=\\"400px\\"
    className=\\"flex-col bg-white p-4 shadow rounded-md\\"
  >
    <Image
      src=\\"https://placekitten.com/300/300\\"
      minH={0}
      objectFit=\\"cover\\"
      className=\\"rounded-none flex-1\\"
    />
    <Box display=\\"flex\\" className=\\"mt-4\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\">
        News
      </Text>
    </Box>
    <Text className=\\"mt-1\\">
      Here you can explore the latest news and information.
    </Text>
  </Box>
</Frame>;
"
`;

exports[`element as prop default 1`] = `
"<Frame width={100} height={40}>
  <Box
    style={{ display: 'flex', alignItems: 'center', width: 100, height: 40 }}
  >
    <FormControlLabel
      control={<Checkbox checked={false} disabled={false} />}
      label=\\"Hello world\\"
    />
  </Box>
</Frame>;
"
`;

exports[`generate file chakra 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { ChakraProvider, Box } from '@chakra-ui/react';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return <ChakraProvider />;
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@chakra-ui/react\\": \\"^2\\",
    \\"@chakra-ui/system\\": \\"^2\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"framer-motion\\": \\"^10\\",
    \\"@chakra-ui/icons\\": \\"^2\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`generate file mui 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { Box, FormControlLabel, Checkbox } from '@mui/material';
import '@fontsource/roboto/latin.css';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return (
    <>
      <Frame width={100} height={40}>
        <Box
          style={{
            display: 'flex',
            alignItems: 'center',
            width: 100,
            height: 40,
          }}
        >
          <FormControlLabel
            control={<Checkbox checked={false} disabled={false} />}
            label=\\"Hello world\\"
          />
        </Box>
      </Frame>
    </>
  );
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@mui/material\\": \\"^5\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"@mui/icons-material\\": \\"^5\\",
    \\"@fontsource/roboto\\": \\"^5\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`hero default 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    w=\\"400px\\"
    h=\\"400px\\"
    className=\\"flex-col bg-transparent p-4 gap-3 backdrop-blur items-center justify-center\\"
  >
    <Box display=\\"flex\\">
      <Text fontSize=\\"6xl\\" flex=\\"1\\" textAlign=\\"center\\">
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"mb-4\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"center\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button isDisabled={false} textColor=\\"#fff\\" bgColor=\\"#15803d\\">
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero left aligned 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    w=\\"400px\\"
    h=\\"400px\\"
    className=\\"flex-col bg-transparent p-4 gap-3 backdrop-blur items-start justify-center\\"
  >
    <Box display=\\"flex\\">
      <Text fontSize=\\"6xl\\" flex=\\"1\\" textAlign=\\"left\\">
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"mb-4\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"left\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button isDisabled={false} textColor=\\"#fff\\" bgColor=\\"#15803d\\">
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero with bg 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    w=\\"400px\\"
    h=\\"400px\\"
    className=\\"flex-col bg-blue-500 p-4 gap-3 backdrop-blur items-center justify-center\\"
  >
    <Box display=\\"flex\\">
      <Text fontSize=\\"6xl\\" flex=\\"1\\" textAlign=\\"center\\" className=\\"text-white\\">
        Create, iterate, inspire.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"mb-4\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"center\\" className=\\"text-white\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box display=\\"flex\\" className=\\"bg-transparent flex-row items-center gap-6\\">
      <Button
        isDisabled={false}
        textColor=\\"#000\\"
        bgColor=\\"#f1f5f9\\"
        className=\\"text-white\\"
      >
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`icon default 1`] = `
"<Frame width={48} height={48}>
  <Image
    src=\\"https://api.iconify.design/material-symbols/menu.svg\\"
    objectFit=\\"contain\\"
    w=\\"100%\\"
    h=\\"100%\\"
  />
</Frame>;
"
`;

exports[`icon with color 1`] = `
"<Frame width={48} height={48}>
  <Box
    w=\\"100%\\"
    h=\\"100%\\"
    bgColor=\\"#60a5fa\\"
    style={{
      maskImage:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
      WebkitMask:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
    }}
  />
</Frame>;
"
`;

exports[`link with icon 1`] = `
"<Frame width={100} height={40}>
  <Link
    fontWeight={500}
    textColor=\\"dodgerblue\\"
    textDecorationColor=\\"dodgerblue\\"
  >
    Test
  </Link>
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text textAlign=\\"center\\" className=\\"text-red-500\\">
    Hello world
  </Text>
</Frame>;
"
`;

exports[`text escape jsx 1`] = `
"<Frame width={100} height={40}>
  <Text>{'Hello \\"\\\\'<{test}>\\\\'\\" world'}</Text>
</Frame>;
"
`;
